# sgr_test_suite

./: PLAN.md  README.md  pyproject.toml
models/: __init__.py  pipeline.py
sgr/: __init__.py
sgr/llm/: __init__.py  client.py  pipeline.py
sgr/pipelines/: __init__.py
sgr/pipelines/routing/: __init__.py  test_cases.json
sgr/pipelines/splitter/: __init__.py  pipeline.py  test_cases.json
sgr/routing/: __init__.py  pipeline.py
sgr/testing/: __init__.py  cli.py  models.py  runner.py  schema.py  test_cases.schema.json  ui.py
tests/: test_chat_pipeline.py  test_runner_comparators.py  test_splitter_pipeline.py  test_structured_pipeline.py  test_test_cases_schema.py
