[project]
name = "sgr-test-suite"
version = "0.1.0"
description = "Building blocks for LLM pipeline testing with uv."
requires-python = ">=3.11"
dependencies = [
    "openai>=1.40.0",
    "gradio>=4.44.1",
]

[project.scripts]
sgr-test = "sgr.testing.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
